rectification bug z-index nevigation

--- a/src/routes/Header/Navigation/Navigation.module.scss
+++ b/src/routes/Header/Navigation/Navigation.module.scss
@@ -56,7 +56,7 @@
 		background-color: #0c0424;
 		visibility: hidden;
 		transition: all 0.8s ease-out;
-		z-index: 2;
+		z-index: 12;
 		li {
 			width: 90%;
 			margin-right: 0px;
